--- a/LSIS1/pom.xml
+++ b/LSIS1/pom.xml
@@ -11,7 +11,12 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     
-    <dependencies>      
+    <dependencies>   
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>   
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>  
