--- a/LSIS1/pom.xml
+++ b/LSIS1/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>  
-            <version>3.9.0</version>
+            <version>4.2.6</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -49,6 +49,10 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.12.2</version>
         </dependency>
-    
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.68.Final</version>
+        </dependency>
     </dependencies>
 </project>
