--- a/LSIS1/pom.xml
+++ b/LSIS1/pom.xml
@@ -54,5 +54,13 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.68.Final</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>6.0.1</version>
+        </dependency>
+
+
     </dependencies>
 </project>
